--- a/war-tool/src/App.css
+++ b/war-tool/src/App.css
@@ -1,16 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
- 
+  background-color: #53565c;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,6 +8,15 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+body {
+  background-color: #53565c;
+}
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .App-link {
